# filetas

./: Cargo.toml  Containerfile  Dockerfile  README.md  app.py  docker-bake.hcl  requirements.txt
.github/workflows/: docker-dev.yml  docker-release.yml  docker.yml  release.yml
docker/: Dockerfile  docker-bake.hcl
src/: main.rs
templates/: error.html  index.html
