[package]
name = "filetas"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.1"          # 用于 Web 服务
tokio = { version = "1.44.0", features = ["full"] }       # 异步运行时
url = "2.5.4"           # URL 解析
tokio-util = "0.7.13"    # 用于流式响应clear
regex = "1.11.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12.12"
