[package]
name = "filetas"
version = "0.3.2"
edition = "2024"

[dependencies]
axum = "0.8"                                                      # 用于 Web 服务
tokio = { version = "1.47", features = ["full"] }                 # 异步运行时
url = "2.5"                                                       # URL 解析
tokio-util = "0.7"                                               # 用于流式响应clear
regex = "1.12"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }            # HTTP 客户端
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4.5", features = ["derive", "env"] }
